--- a/app.json
+++ b/app.json
@@ -23,11 +23,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
       "supportsTablet": true
     },
     "android": {
-      "permissions": ["CAMERA"]
+      "permissions": [
+        "CAMERA"
+      ]
     },
     "description": ""
   }
